# SciDef

./: .gitignore  .pre-commit-config.yaml  APPENDIX.md  CITATION.cff  LICENSE  README.md  config.py  pyproject.toml
appendix/tables/: tab_best_by_strategy_noctx.md  tab_cost_actual.md  tab_metric_validation_krippendorff.md  tab_metric_validation_metric.md  tab_overdefinition.md  tab_sim_f1_best.md  tab_top10_extractors.md
artifacts/dspy_paper_extractor_hosted_vllm/Qwen/: Qwen3-30B-A3B-Instruct-2507-FP8_tau-0.25_metricThres0.25_section_miprov2-light_1766399412.4209535_v1.json  Qwen3-30B-A3B-Thinking-2507-FP8_tau-0.25_metricThres0.25_section_miprov2-light_1766994016.9553652_v1.json  Qwen3-4B-Instruct-2507-FP8_tau-0.25_metricThres0.25_section_bootstrap_1765528778.5059915_v1.json
artifacts/dspy_paper_extractor_hosted_vllm/RedHatAI/: DeepSeek-R1-Distill-Qwen-7B-FP8-dynamic_tau0.15_section_1765167493.1229868_v1.json
artifacts/dspy_paper_extractor_hosted_vllm/deepseek-ai/: DeepSeek-R1-0528-Qwen3-8B_tau-0.25_metricThres0.25_section_miprov2_1765868481.8696427_v1.json
artifacts/dspy_paper_extractor_hosted_vllm/mistralai/: Magistral-Small-2509_tau-0.25_metricThres0.25_section_miprov2-light_1766395582.119315_v1.json  Ministral-3-3B-Reasoning-2512_tau-0.25_metricThres0.25_section_bootstrap_random_1765540887.3382592_v1.json  Ministral-3-3B-Reasoning-2512_tau-0.25_metricThres0.25_section_miprov2_1765689367.9526672_v1.json
artifacts/dspy_paper_extractor_hosted_vllm/nvidia/: NVIDIA-Nemotron-3-Nano-30B-A3B-FP8_tau-0.25_metricThres0.25_section_miprov2-light_1766399066.3411694_v1.json
artifacts/dspy_paper_extractor_hosted_vllm/openai/: gpt-oss-20b_tau-0.25_metricThres0.25_section_bootstrap-light_1769766877.325432_v1.json  gpt-oss-20b_tau-0.25_metricThres0.25_section_bootstrap_1765704094.4381716_v1.json  gpt-oss-20b_tau-0.25_metricThres0.25_section_bootstrap_random_1765768598.771271_v1.json  gpt-oss-20b_tau-0.25_metricThres0.25_section_miprov2-light_1765957466.4047902_v1.json
artifacts/dspy_paper_extractor_openai/: gpt-oss-20b_tau-0.25_metricThres0.25_section_bootstrap-light_1769764367.4024904_v1.json
artifacts/dspy_paper_extractor_openrouter/google/: gemini-2.5-flash_tau-0.25_metricThres0.25_section_bootstrap_1765872935.6508133_v1.json  gemini-2.5-flash_tau-0.25_metricThres0.25_section_bootstrap_random-light_1765938437.1230674_v1.json  (+2 more)
data/: defExtra.json
docs/: cli.md  defextra_integration.md  dspy_custom_extractor.md
scidef/: utils.py
scidef/benchmark/: __init__.py  dataclass.py  dataset.py  embedding_report.py  judge_report.py  metrics.py  nli_report.py  report.py  service.py
scidef/evaluation/: service.py  utils.py
scidef/extraction/: dataclass.py  service.py  utils.py
scidef/extraction/extractor/: __init__.py  base.py  (+5 more)
scidef/grobid/: service.py
scidef/model/: dataclass.py
scripts/: README.md  _bootstrap.py  benchmark_embedding.py  benchmark_judge.py  benchmark_nli.py  defextra_csv_to_json.py  dspy_train.py  evaluate_extraction.py  extract_definitions.py  pdf_to_grobid.py
(+10 files in other folders)
