[project]
name = "SciDef"
version = "1.0.0"
description = "**SciDef** provides resources to support research on **definition extraction and definition similarity** from scientific literature."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "KuÄera Filip", email = "f.kucera@media-bias-research.org"},
    {name = "Mandl Christoph", email = "c.mandl@media-bias-research.org"},
    {name = "Echizen Isao", email = "iechizen@nii.ac.jp"},
    {name = "Timofte Radu", email = "radu.timofte@uni-wuerzburg.de"},
    {name = "Spinde Timo", email = "t.spinde@media-bias-research.org"},
]
license = "Apache-2.0"
dependencies = [
    "accelerate>=1.12.0",
    "argparse>=1.4.0",
    "asyncio>=4.0.0",
    "config>=0.5.1",
    "datasets>=4.5.0",
    "dspy>=3.1.3",
    "grobid-client-python>=0.1.4",
    "huggingface-hub>=0.36.2",
    "kagglehub>=0.4.3",
    "logging>=0.4.9.6",
    "lxml>=6.0.2",
    "openai>=2.20.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "flashinfer-python>=0.6.1",
    "hf-transfer>=0.1.9",
    "ipykernel>=7.2.0",
    "streamlit>=1.54.0",
    "vllm>=0.15.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "wandb>=0.24.2",
    "weave>=0.52.26",
    "torch-c-dlpack-ext>=0.1.5",
    "timm>=1.0.24",
    "bitsandbytes>=0.49.1",
    "ty>=0.0.16",
    "nvidia-modelopt>=0.41.0",
    "ruff>=0.15.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["C901"]
